include_directories(../../AVC/h264_baseline_decoder/lib_baseline ../../AVC/h264_main_decoder/lib_main)

ADD_DEFINITIONS(-DHAVE_SDL)

add_library (SVC_baseline
B_BL.cBackEdge.cBL_residual.cBL.ccabac_svc.cCabacBMacroblock.cCabacIPartionning.cCabacPMacroblock.ccavlc_svc.cChooseLayer.cCoeffLevelPrediction.cCoordonates.cegde_boundary.cErrorConcealment.cErrorDetection.cFill_caches_svc.cFinishFrameSVC.cI_BL.cInterLayerPrediction.cLoop_filter_ext.cmacroblock_filter.cMb_B_svc.cMb_I_svc.cMb_P_svc.cmb_padding.cmb_upsample_filter.cMemoryManagement.cMergeMvIdx.cmotion_vector_svc.cnal_unit_header_svc_extension.cP_BL.cParseAUDecoder.cPartitionType.cpic_list_svc.cresidual_4x4.cresidual_8x8.cresidual_chroma.cResidualProcessing.cseq_parameter_set_svc_extension.cSlice_data_B_avc.cSlice_data_B_svc.cslice_data_cabac.cslice_data_cavlc.cSlice_data_I_avc.cslice_data_I_svc.cSlice_data_P_avc.cslice_data_P_svc.cslice_data_svc.cslice_header_svc.cslice_layer_in_scalable_extension_rbsp.cSliceHeaderAnnex.cSliceHeaderExtension.csvc_neighbourhood.cSVCdisplay.cSwitchAdress.cupsample_residu.cVlcCabacSvc.cWriteBackSVC.c
)
