add_library (AVC_baseline
AVCdisplay.cBitstreamSkip.ccavlc_mmx.ccavlc.cdecode_MB_I.cdecode_MB_P.cdisplay_management.cedge_filter_MMX.cedge_filter_TI.cedge_filter.cfill_caches.cfilter.cFinishFrame.cIDR_picture.cImages_set_edges.cinit_data.cinit_Ptr_Fction.cinterpol_0_n_TI.cinterpol_0_n.cinterpol_2_n_TI.cinterpol_2_n.cinterpol_n_0_TI.cinterpol_n_0.cinterpol_n_2_TI.cinterpol_n_2.cinterpol_n_n_TI.cinterpol_n_n.cinterpolation_0_n.cinterpolation_2_n.cinterpolation_4x4_mmx.cinterpolation_4x4_TI.cinterpolation_8x8_SSE2.cinterpolation_8x8.cinterpolation_mmx.cinterpolation_n_0.cinterpolation_n_2.cinterpolation_n_n.cinterpolation.cmacroblock_layer.cmacroblock_partitionning.cmb_pred.cmemory_management.cmotion_vector.cNal.cneighbourhood.cnon_IDR_picture.cpic_list.cpicture_management.cpps.cprediction_mode_8x8.cprediction_mode.cQuantization.cRead_H264.crefill.cscaling_matrix.csei.cslice_data_vlc.cslice_group_map.cslice_header.csps.cTransform.cwrite_back.c
)
