include_directories(../../h264_baseline_decoder/lib_baseline)

add_library (AVC_main
BitstreamSkipB.ccabac.cCabacMbPred.cCabacMvAndRef.ccavlc_main.cDirect_prediction.cFill_caches_cabac.cFinishFrameMain.cinterpolation_main_8x8.cinterpolation_main.cLoop_Filter_B.cmacroblock_cabac.cmacroblock_layer_main.cmb_cabac_partionning.cmb_pred_main.cresidual_cabac.cSetImage4x4.cSetImage8x8.cslice_cabac.cslice_data_B.cslice_data_cabac.cvlc_cabac.c
)
